2007-05-11  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amcrypt-ossl-asym.sh.in: Use CLIENT_LOGIN.
	* server-src/amcrypt-ossl.sh.in: Use CLIENT_LOGIN.

2007-05-08  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/krb5-security.c: Fix compilation.

2007-05-09	Dustin J. Mitchell <dustin@zmanda.com>
	* common-src/stream.c: add errno's to stream_client_internal

2007-05-09	Dustin J. Mitchell <dustin@zmanda.com>
	* server-src/amadmin.c server-src/infofile.c
	  common-src/security-util.c common-src/krb5-security.c:
	  fix type-punning warnings

2007-05-09	Dustin J. Mitchell <dustin@zmanda.com>
	* recover-src/set_commands.c server-src/amcheck.c
	  server-src/dumper.c common-src/rsh-security.c
	  common-src/krb5-security.c common-src/util.c common-src/util.h
	  common-src/bsdtcp-security.c common-src/stream.c
	  common-src/ssh-security.c common-src/bsd-security.c
	  common-src/security-util.c common-src/bsdudp-security.c
	  common-src/security-util.h: Add IPv6-savvy resolve_hostname() and use it
	  everywhere

2007-05-08  Jean-Louis Martineau <martineau@zmanda.com>
	* config/Makefile.am (EXTRA_DIST): Add docbook-dtd.m4i,
	  docbook-xslt.m4i, docbook-xslt-min.m4i and xsltproc.m4i.

2007-05-07  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/stream.c: pass correct sockaddr size to bind()

2007-05-07  Pieter Bowman <bowman@math.utah.edu>
	* common-src/file.c: reverse the order of chown/chmod to correctly
	  create temporary files.

2007-05-07  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/krb5-security.c: Fix compilation.

2007-05-04  Dustin J. Mitchell <dustin@zmanda.com>
	* server-src/cmdline.c server-src/holding.c server-src/holding.h
	  server-src/amadmin.c server-src/amcleanupdisk.c: remove 
	  holding_file_read_header()

2007-05-04  Dustin J. Mitchell <dustin@zmanda.com>
	* common-src/sockaddr-util.h common-src/bsdtcp-security.c common-src/security-util.c