@@ -1,3 +1,7 @@
+2007-05-15  Dustin J. Mitchell <dustin@zmanda.com>
+	* client-src/sendsize.c: fix parsing of include/excludes for 
+	  old clients
+
 2007-05-11  Jean-Louis Martineau <martineau@zmanda.com>
 	* server-src/amcrypt-ossl-asym.sh.in: Use CLIENT_LOGIN.
 	* server-src/amcrypt-ossl.sh.in: Use CLIENT_LOGIN.
